css body.fixed-nav .site-wrap added

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
   transition: transform 0.5s;
 }
 
+body.fixed-nav .site-wrap {
+  transform: scale(1);
+}
+
 header {
   text-align: center;
   height:50vh;
